--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <div class="album py-5 bg-dark">
+  <div class="album bg-dark">
     <div class="container">
       <div class="row" id = "list">
       </div>
